# ldap-cpp

./: CMakeLists.txt  Makefile  cldap_berval.cpp  cldap_berval.h  cldap_entry.cpp  cldap_entry.h  cldap_mod.cpp  cldap_mod.h  cldap_server.cpp  cldap_server.h  cldap_types.h  readme
examples/: CMakeLists.txt  Makefile  cat.cpp  group_ldap_acl.cpp  groups.cpp  ping.cpp  test.cpp
qldapbrowser/: QLdapBrowser.pro  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  serverdialog.ui
trunk/: Makefile  cldap.h  cldap_berval.cpp  cldap_berval.h  cldap_entry.cpp  cldap_entry.h  cldap_mod.cpp  cldap_mod.h  cldap_server.cpp  cldap_server.h  cldap_types.h  readme
trunk/examples/: Makefile  group_ldap_acl.8  group_ldap_acl.cpp  groups.cpp  test.cpp
trunk/trunk/: cldap_mod.cpp
trunk/trunk/examples/: group_ldap_acl.cpp  ping.cpp  test.cpp
wiki/: PageName.wiki
